fix db
