# docs/swagger.json
@@ -209,203 +209,6 @@
                 }
             }
         },
-        "/ratings": {
-            "get": {
-                "description": "Get all ratings from the database.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Ratings"
-                ],
-                "summary": "Get all ratings.",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Rating"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Create a new rating for a specific review.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Ratings"
-                ],
-                "summary": "Create a new rating.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "JWT access token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "Rating details",
-                        "name": "Body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/controllers.RatingInput"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/ratings/{id}": {
-            "get": {
-                "description": "Get a rating by its ID.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Ratings"
-                ],
-                "summary": "Get a rating by ID.",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Rating ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Rating"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "Update an existing rating with the provided details.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Ratings"
-                ],
-                "summary": "Update a rating.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "JWT access token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Rating ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Rating details",
-                        "name": "Body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/controllers.RatingInput"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Delete an existing rating.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Ratings"
-                ],
-                "summary": "Delete a rating.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "JWT access token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Rating ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "rating deleted successfully",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/register": {
             "post": {
                 "description": "registering a user from public access.",
@@ -522,25 +325,6 @@
                 }
             }
         },
-        "controllers.RatingInput": {
-            "type": "object",
-            "required": [
-                "rating",
-                "review_id",
-                "user_id"
-            ],
-            "properties": {
-                "rating": {
-                    "type": "integer"
-                },
-                "review_id": {
-                    "type": "integer"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
         "controllers.RegisterInput": {
             "type": "object",
             "required": [
@@ -597,23 +381,6 @@
                 },
                 "name": {
                     "type": "string"
-                }
-            }
-        },
-        "models.Rating": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "rating": {
-                    "type": "integer"
-                },
-                "reviewID": {
-                    "type": "integer"
-                },
-                "userID": {
-                    "type": "integer"
                 }
             }
         }
